Add Desugarer (#373)
* add android desugarer

* turn lib into kotlin lib

* kinda fix cacheRoutes task yikes

* remove warning again lol

* I think I completely fixed this? LOL